// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateInput/> tests renders with empty value and allow variables 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          data-testid="input"
          placeholder="MM/DD/YYYY"
          type="text"
          value=""
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <div
      class="helpText"
    >
      Support custom variables: "current() + 2d 2h"
      <span
        class="bp3-popover-wrapper helpIcon"
      >
        <span
          class="bp3-popover-target"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="question"
            tabindex="0"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
            >
              <path
                d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                fill="#9AA5B5"
              />
            </svg>
          </span>
        </span>
      </span>
       
    </div>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with empty value date 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          data-testid="input"
          placeholder="MM/DD/YYYY"
          type="text"
          value=""
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with empty value date time 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          data-testid="input"
          placeholder="MM/DD/YYYY HH:mm"
          type="text"
          value=""
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with invalid value and allow variables 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main hasError"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="MM/DD/YYYY"
          type="text"
          value="current() + 2x"
        />
      </div>
      <div
        class="errorDiv"
        data-name=""
      >
        <span
          class="bp3-icon StyledProps--main errorTextIcon StyledProps--intent-danger"
          data-icon="circle-cross"
        >
          <svg
            height="12"
            viewBox="0 0 13 13"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M.167 6.501a6.333 6.333 0 1 0 12.666 0 6.333 6.333 0 0 0-12.666 0Zm4.071-3.003 2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="error"
        >
          Not a valid Date Expression
        </span>
      </div>
    </div>
    <div
      class="helpText"
    >
      Support custom variables: "current() + 2d 2h"
      <span
        class="bp3-popover-wrapper helpIcon"
      >
        <span
          class="bp3-popover-target"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="question"
            tabindex="0"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
            >
              <path
                d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                fill="#9AA5B5"
              />
            </svg>
          </span>
        </span>
      </span>
       
    </div>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with value  1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="MM/DD/YYYY"
          type="text"
          value="01/23/2020"
        />
      </div>
    </div>
    <span
      class="bp3-popover-wrapper calendarIcon"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<DateInput/> tests renders with value and allow variables 1`] = `
<div>
  <div
    class="dateInput"
  >
    <div
      class="main success"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="MM/DD/YYYY"
          style="padding-right: 0px;"
          type="text"
          value="current() + 2h"
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-tick StyledProps--main"
            icon="tick"
          >
            <svg
              data-icon="tick"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                tick
              </desc>
              <path
                d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="helpText"
    >
      Support custom variables: "current() + 2d 2h"
      <span
        class="bp3-popover-wrapper helpIcon"
      >
        <span
          class="bp3-popover-target"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="question"
            tabindex="0"
          >
            <svg
              height="14"
              viewBox="0 0 14 14"
              width="14"
            >
              <path
                d="M7 .1C3.2.1.1 3.2.1 7s3.1 6.9 6.9 6.9 6.9-3.1 6.9-6.9S10.8.1 7 .1zm0 1.2c3.2 0 5.7 2.6 5.7 5.7s-2.6 5.7-5.7 5.7S1.3 10.2 1.3 7 3.8 1.3 7 1.3zm0 2.3c-1.3 0-2.3 1-2.3 2.3h1.1c0-.6.5-1.1 1.1-1.1S8 5.3 8 5.9c0 .4-.3.8-.7 1h-.1c-.4.2-.8.6-.8 1.1v.7h1.1V8l.2-.1c.9-.3 1.5-1.1 1.5-2.1.1-1.2-.9-2.2-2.2-2.2zm-.6 5.7v1.1h1.1V9.3H6.4z"
                fill="#9AA5B5"
              />
            </svg>
          </span>
        </span>
      </span>
       
    </div>
  </div>
</div>
`;
